# TFM

./: .gitignore
scripts/: Cargo.toml  SequenceManipulation.R  SequenceManipulation.jl  SequenceManipulation.py  run_scripts.sh  write_julia_results.py
scripts/src/: main.rs
scripts_machine_learning/: Cargo.toml  MachineLearningScript.R  MachineLearningScript.jl  MachineLearningScript.py  create_plots.R  run_scripts.sh  write_julia_results.py
scripts_machine_learning/src/: lib.rs  main.rs
scripts_omics/: .~lock.table_counts.tsv#  Cargo.toml  E-GEOD-22954.csv  OmicsDataManipulation.R  OmicsDataManipulation.jl  OmicsDataManipulation.py  create_plots.R  run_scripts.sh  table_counts.tsv  write_julia_results.py
scripts_omics/src/: main.rs
